; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/libzfs_input_check/extr_libzfs_input_check.c_main.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/cmd/libzfs_input_check/extr_libzfs_input_check.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"usage: %s <pool>\0A\00", align 1
@.str.1 = private unnamed_addr constant [59 x i8] c"WARNING: zfs_ioc_t has binary incompatible command values\0A\00", align 1
@ZFS_DEV = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@zfs_fd = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [10 x i8] c"open: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@unexpected_failures = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 2
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i32, i32* @stderr, align 4
  %10 = load i8**, i8*** %5, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 0
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 (i32, i8*, ...) @fprintf(i32 %9, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = call i32 @exit(i32 2) #3
  unreachable

15:                                               ; preds = %2
  %16 = call i32 (...) @validate_ioc_values()
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %15
  %19 = load i32, i32* @stderr, align 4
  %20 = call i32 (i32, i8*, ...) @fprintf(i32 %19, i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 @exit(i32 3) #3
  unreachable

22:                                               ; preds = %15
  %23 = call i32 (...) @libzfs_core_init()
  %24 = load i32, i32* @ZFS_DEV, align 4
  %25 = load i32, i32* @O_RDWR, align 4
  %26 = call i64 @open(i32 %24, i32 %25)
  store i64 %26, i64* @zfs_fd, align 8
  %27 = load i64, i64* @zfs_fd, align 8
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %36

29:                                               ; preds = %22
  %30 = load i32, i32* @stderr, align 4
  %31 = load i32, i32* @errno, align 4
  %32 = call i8* @strerror(i32 %31)
  %33 = call i32 (i32, i8*, ...) @fprintf(i32 %30, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %32)
  %34 = call i32 (...) @libzfs_core_fini()
  %35 = call i32 @exit(i32 2) #3
  unreachable

36:                                               ; preds = %22
  %37 = load i8**, i8*** %5, align 8
  %38 = getelementptr inbounds i8*, i8** %37, i64 1
  %39 = load i8*, i8** %38, align 8
  %40 = call i32 @zfs_ioc_input_tests(i8* %39)
  %41 = load i64, i64* @zfs_fd, align 8
  %42 = call i32 @close(i64 %41)
  %43 = call i32 (...) @libzfs_core_fini()
  %44 = load i32, i32* @unexpected_failures, align 4
  ret i32 %44
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @validate_ioc_values(...) #1

declare dso_local i32 @libzfs_core_init(...) #1

declare dso_local i64 @open(i32, i32) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @libzfs_core_fini(...) #1

declare dso_local i32 @zfs_ioc_input_tests(i8*) #1

declare dso_local i32 @close(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
